# universal-datasets

./: .gitignore  README.md  project.toml  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
examples/: camvid.ipynb  nih.ipynb  nih_with_transform.ipynb  nih_with_xrv.ipynb  public_tb.ipynb
prepare_dataset/: camvid.sh
pxi_datasets/internal/: internal.py
pxi_datasets/utils/: collate_fn.py  retrieve.py  utils.py
scripts/: camvid.sh  pascal_voc.sh
src/components/: README.md  camvid.py
test/: test_utils.py
tests/: test_components.py  test_cpnt.py  test_transforms.py  test_utils.py
udt/components/: README.md  __init__.py  _base.py  base.py  camvid.py  public_tb.py
udt/utils/: image.py  logger.py
univdt/components/: README.md  __init__.py  base.py  camvid.py  jraigs.py  mnist.py  nih.py  public_tb.py  rsna_penumonia.py  voc.py
univdt/datamodules/: __init__.py  base.py
univdt/transforms/: __init__.py  builder.py  pixel.py  ratio.py  resize.py  spatial.py  spatial_level_augs.py  test_transforms.py  windowing.py  zoom.py
univdt/univdt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
univdt/utils/: dicom.py  logger.py  retrieve.py
