[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "udt"
version = "0.1.0"
description = "universal-datasets"
authors = ["dongseopkim <k_ds1028@naver.com>"]
license = "MIT"
keywords = ["python", "dataset", "camvid", "voc", "publictb"]
repository = "https://github.com/dongseop-kim/universal-datasets"


[tool.poetry.dependencies]
python = "^3.9.0"
torch = "^1.13.0"
torchvision = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
