[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
addopts = "-s"



# https://packaging.python.org/en/latest/guides/writing-pyproject-toml
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "univdt"
version = "0.0.3"
description = "universal-datasets"
authors = [{name = "Pradyun dongseopkim", email = "k_ds1028@naver.com"}]
readme = "README.md"
keywords = ["python", "dataset", "camvid", "voc", "publictb", "nih", "chestxray14", "shenzhen", 
            "montgomery", "tbx11k", "dadb", "tbpredict"]
requires-python = "==3.10"
dependencies = ["torch== 1.13.0",
                "lightning==2.1.3",
                "pytest",
                "opencv-python-headless==4.9.0",
                "albumentations==1.3.1",
                "gdown",
                "omegaconf",
                ]


[project.urls]
Repository = "https://github.com/dongseop-kim/universal-datasets.git"
Issues = "https://github.com/dongseop-kim/universal-datasets/issues"

# it works
# namespaces = false. This will prevent any folder without an __init__.py file from being scanned.
[tool.setuptools.packages]
find = {namespaces = false}

# it works too
# [tool.setuptools.packages]
# find = {} # becuz current my modules all have __init__.py

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["utils*"]
# include = ["components*", "utils*"]
